--- a/www/templates/meterelect.html
+++ b/www/templates/meterelect.html
@@ -10,7 +10,7 @@
       <div class="list">
         <label class="item item-input">
           <span class="input-label">Description</span>
-          <input type="text" ng-model="eMeterData.description" name="description" id="description">
+          <input type="text" ng-model="eMeterData.description" name="description" id="description" autoFocus>
         </label>
         <label class="item item-input">
           <span class="input-label">Serial Nr</span>
