--- a/www/templates/addaccount.html
+++ b/www/templates/addaccount.html
@@ -10,7 +10,7 @@
       <div class="list">
         <label class="item item-input">
           <span class="input-label">Account Number</span>
-          <input type="text" ng-model="accountData.number" name="accountNumber" id="accountNumber">
+          <input type="text" ng-model="accountData.number" name="accountNumber" id="accountNumber" autoFocus>
         </label>
         <label class="item item-input">
           <span class="input-label">E-Service No</span>
