--- a/www/templates/directory.html
+++ b/www/templates/directory.html
@@ -1,6 +1,6 @@
 <ion-view view-title="STLM - Directory">
   <ion-content overflow-scroll="true">
-    <div class="card" ng-repeat="(key, value) in directory.directory|groupBy:'name'">
+    <div class="card" ng-repeat="(key, value) in directory.directory | groupBy:'name'">
       <div class="item item-divider item-assertive">
         {{key}}
       </div>
@@ -10,7 +10,7 @@
             {{info.contact_number}}
           <i class="icon ion-ios-telephone-outline"></i>
         </a>
-      <div ng-show="info.address!=''">
+      <div ng-show="info.address">
         <a class="item item-icon-left item-icon-right" href="#">
           <i class="icon ion-map"></i>
             {{info.address}}
