--- a/platforms/android/assets/www/templates/quotations.html
+++ b/platforms/android/assets/www/templates/quotations.html
@@ -3,7 +3,7 @@
     <div class="card" ng-repeat="quotation in quotations.quotations">
       <div class="item item-divider item-dark lightDownload">
         {{quotation.quote_nr}}
-        <a  ng-show="quotation.quote_nr != 'none'" class="item-icon-right" href="http://stlm.gov.za/Quotations/{{quotation.quote_nr}}.pdf" target="_blank">
+        <a  ng-show="quotation.quote_nr != 'none'" class="item-icon-right" ng-click="showQuotation('http://stlm.gov.za/Quotations/{{quotation.quote_nr}}.pdf')">
           <i class="icon ion-android-download"></i>
         </a>
       </div>
