--- a/platforms/android/assets/www/templates/meterelect.html
+++ b/platforms/android/assets/www/templates/meterelect.html
@@ -10,11 +10,15 @@
       <div class="list">
         <label class="item item-input">
           <span class="input-label">Description</span>
-          <input type="text" ng-model="eMeterData.description" name="description" id="description" autoFocus>
+        </label>
+        <label class="item item-input">
+          <span class="formtextinput"><input type="text" ng-model="eMeterData.description" name="description" id="description" autoFocus></span>
         </label>
         <label class="item item-input">
           <span class="input-label">Serial Nr</span>
-          <input type="text" ng-model="eMeterData.serial" name="serial" id="serial">
+        </label>
+        <label class="item item-input">
+          <span class="formtextinput"><input type="text" ng-model="eMeterData.serial" name="serial" id="serial"></span>
         </label>
         <label class="item">
           <button class="button button-block button-balanced" type="submit">Add</button>
