--- a/www/templates/addaccount.html
+++ b/www/templates/addaccount.html
@@ -10,11 +10,15 @@
       <div class="list">
         <label class="item item-input">
           <span class="input-label">Account Number</span>
-          <input type="text" ng-model="accountData.number" name="accountNumber" id="accountNumber" autoFocus>
+        </label>
+        <label class="item item-input">
+          <span class="formtextinput"><input type="text" ng-model="accountData.number" name="accountNumber" id="accountNumber" autoFocus></span>
         </label>
         <label class="item item-input">
           <span class="input-label">E-Service No</span>
-          <input type="text" ng-model="accountData.eService" name="eService" id="eService">
+        </label>
+        <label class="item item-input">
+          <span class="formtextinput"><input type="text" ng-model="accountData.eService" name="eService" id="eService"></span>
         </label>
         <label class="item">
           <button class="button button-block button-balanced" type="submit">Add</button>
