--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -10,10 +10,14 @@
       <div class="list">
         <label class="item item-input">
           <span class="input-label">Username / Email</span>
+        </label>
+        <label class="item item-input">
           <span class="formtextinput"><input type="text" ng-model="loginData.username" autoFocus></span>
         </label>
         <label class="item item-input">
-          <span class="input-label">Password</span>
+          <span class="input-label">Password</span><br />
+        </label>
+        <label class="item item-input">
           <span class="formtextinput"><input type="password" ng-model="loginData.password"></span>
         </label>
         <label class="item">
