--- a/www/templates/register.html
+++ b/www/templates/register.html
@@ -2,6 +2,8 @@
   <ion-header-bar>
     <h1 class="title">Register new Login</h1>
     <div class="buttons">
+      <button class="button button-clear" ng-click="helpAccount()">Help</button>
+      <button class="button button-clear"></button>
       <button class="button button-clear" ng-click="closeRegister()">Close</button>
     </div>
   </ion-header-bar>
@@ -10,22 +12,34 @@
       <div class="list">
         <label class="item item-input">
           <span class="input-label">Email address</span>
-          <span class="formtextinput"><input name="email" type="email" ng-model="loginData.username" placeholder="john@domain.com" autoFocus required ></span>
+        </label>
+        <label class="item item-input">
+          <span class="formtextinput"><input name="email" type="email" ng-model="loginData.username" placeholder="john@domain.com" autoFocus required on-blur="checkUser(myForm.email)"></span>
             <span style="color:red" ng-show="myForm.email.$dirty && myForm.email.$invalid">
               <span ng-show="myForm.email.$error.required">Email is required.</span>
               <span ng-show="myForm.email.$error.email">Invalid email address.</span>
             </span>
         </label>
         <label class="item item-input">
+          <span ng-if="status=='Available'" style="color: green; font-size: small;">{{status}}</span>
+          <span ng-if="status!='Available'" style="color: red; font-size: small;">{{status}}</span>
+        </label>
+        <label class="item item-input">
           <span class="input-label">Password</span>
+        </label>
+        <label class="item item-input">
           <span class="formtextinput"><input type="text" ng-model="loginData.password" placeholder="mypassword" required></span>
         </label>
         <label class="item item-input">
           <span class="input-label">Account No</span>
+        </label>
+        <label class="item item-input">
           <span class="formtextinput"><input type="text" ng-model="loginData.account" placeholder="9876543X" required></span>
         </label>
         <label class="item item-input">
           <span class="input-label">E-service No</span>
+        </label>
+        <label class="item item-input">
           <span class="formtextinput"><input type="text" ng-model="loginData.eservice" placeholder="1234567" required></span>
         </label>
         <label class="item">
