--- a/www/templates/ssmeterelect.html
+++ b/www/templates/ssmeterelect.html
@@ -10,10 +10,14 @@
       <div class="list">
         <label class="item item-input">
           <span class="input-label">Address or Stand Nr</span>
+        </label>
+        <label class="item item-input">
           <span class="formtextinput"><input type="text" ng-model="ssMeterData.address" name="address" id="address" autoFocus></span>
         </label>
         <label class="item item-input">
           <span class="input-label">Description</span>
+        </label>
+        <label class="item item-input">
           <span class="formtextinput"><input type="text" ng-model="ssMeterData.description" name="description" id="description"></span>
         </label>
         <label class="item">
@@ -23,6 +27,8 @@
         </label>
         <label class="item item-input">
           <span class="input-label">Comment</span>
+        </label>
+        <label class="item item-input">
           <span class="formtextinput"><input type="text" ng-model="ssMeterData.comment" name="comment" id="comment"></span>
         </label>
         <label class="item">
