--- a/www/templates/ssmeterreadingelect.html
+++ b/www/templates/ssmeterreadingelect.html
@@ -10,14 +10,20 @@
       <div class="list">
         <label class="item item-input">
           <span class="input-label">Reading</span>
+        </label>
+        <label class="item item-input">
           <span class="formtextinput"><input type="text" ng-model="ssReadingData.reading" name="reading" id="reading" autoFocus required></span>
         </label>
         <label class="item item-input">
           <span class="input-label">Date</span>
+        </label>
+        <label class="item item-input">
           <span class="formtextinput"><input type="text" ng-model="ssReadingData.date_read" ng-init="ssReadingData.date_read=date_read" name="date_read" id="date_read" required></span>
         </label>
         <label class="item item-input">
           <span class="input-label">Comment</span>
+        </label>
+        <label class="item item-input">
           <span class="formtextinput"><input type="text" ng-model="ssReadingData.comment" name="comment" id="comment"></span>
         </label>
         <label class="item">
